Grammar/src/main/resources/ENDOWL.g4
grammar ENDOWL;
entitytype : ENTITYTYPE COLON ws classentity ws;
classentity :CLASSENTITY ws classaxiomtype;
classaxiomtype : AXIOMTYPE COLON ws (subclass|equivalent);
subclass: SUBCLASS ws (parentclasses| objectproperties)|(parentclasses ws objectproperties);
equivalent: EQUIVALENT ws parentclasses;
objectproperty : OBJECTPROPERTY ws propertyaxiomtype ws ;
propertyaxiomtype: AXIOMTYPE COLON ws subobjectproperty|objectpropertychain ws;
subobjectproperty : SUBOBJECTPROPERTY ws iri;
objectpropertychain: PROPERTYCHAIN ws (iri ws)+ EOF?;
parentclasses: CLASS COLON ws (iri (COMMA ws)?)+;
objectproperties : PROPERTIES (propertyvalue)+;
propertyvalue: iri ws cardinality ws rangeexpression;
cardinality : SOME | only | min | max| exact;
rangeexpression : namedclass| valueset| union;
namedclass : CLASS COLON ws iri;
valueset : VALUESET COLON ws iri;
union: UNION COLON ws (namedclass|complexclass)+;
complexclass: parentclasses objectproperties;
only : ONLY;
min : MIN ws INTEGER;
max : MAX ws INTEGER;
exact : EXACTLY ws INTEGER;
iri : (LOWERCASE | UPPERCASE | INTEGER)+;
ws : ( sp | htab | cr | lf | comment)+;
comment : SLASH ASTERISK (INTEGER| UPPERCASE| LOWERCASE)+ ASTERISK SLASH;
sp : SPACE; // space
htab : TAB; // tab
cr : CR; // carriage return
lf : LF; // line feed
VALUESET: 'Value set';
MIN: 'min';
MAX: 'max';
EXACTLY : 'exactly';
SOME : 'at least one';
ONLY :'only';
UNION : 'any of/or';
PROPERTIES : 'Property';
PROPERTYCHAIN : 'Property chain';
SUBOBJECTPROPERTY : 'Subproperty of';
ENTITYTYPE: 'Entity type';
OBJECTPROPERTY : 'Object property';
SUBCLASS: 'Subclass of';
EQUIVALENT : 'Equivalent to';
CLASSENTITY : 'Class entity';
AXIOMTYPE : 'Axiom type';
CLASS : 'Class';
INTEGER : [0-9];
LOWERCASE: [a-z];
UPPERCASE: [A-Z];
TAB : [\t];
LF : [\n];
CR : [\r];
SPACE : ' ';
EXCLAMATION : '!';
QUOTE : '"';
POUND : '#';
DOLLAR : '$';
PERCENT : '%';
AMPERSAND : '&';
APOSTROPHE : '\'';
LEFT_PAREN : '(';
RIGHT_PAREN : ')';
ASTERISK : '*';
PLUS : '+';
COMMA : ',';
DASH : '-';
PERIOD : '.';
SLASH : '/';
ZERO : '0';
ONE : '1';
TWO : '2';
THREE : '3';
FOUR : '4';
FIVE : '5';
SIX : '6';
SEVEN : '7';
EIGHT : '8';
NINE : '9';
COLON : ':';
SEMICOLON : ';';
LESS_THAN : '<';
EQUALS : '=';
GREATER_THAN : '>';
QUESTION : '?';
AT : '@';

LEFT_BRACE : '[';
BACKSLASH : '\\';
RIGHT_BRACE : ']';
CARAT : '^';
UNDERSCORE : '_';
ACCENT : '`';
A : 'a';
B : 'b';
C : 'c';
D : 'd';
E : 'e';
F : 'f';
G : 'g';
H : 'h';
I : 'i';
J : 'j';
K : 'k';
L : 'l';
M : 'm';
N : 'n';
O : 'o';
P : 'p';
Q : 'q';
R : 'r';
S : 's';
T : 't';
U : 'u';
V : 'v';
W : 'w';
X : 'x';
Y : 'y';
Z : 'z';
LEFT_CURLY_BRACE : '{';
PIPE : '|';
RIGHT_CURLY_BRACE : '}';
TILDE : '~';
