Grammar/src/main/java/org/endeavourhealth/informationmanager/grammar/ENDOWLParser.java
// Generated from C:/Users/david/CloudStation/EhealthTrust/Discovery Data Service/InformationManager/Grammar/src/main/resources\ENDOWL.g4 by ANTLR 4.9
package org.endeavourhealth.informationmanager.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ENDOWLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VALUESET=1, MIN=2, MAX=3, EXACTLY=4, SOME=5, ONLY=6, UNION=7, PROPERTIES=8, 
		PROPERTYCHAIN=9, SUBOBJECTPROPERTY=10, ENTITYTYPE=11, OBJECTPROPERTY=12, 
		SUBCLASS=13, EQUIVALENT=14, CLASSENTITY=15, AXIOMTYPE=16, CLASS=17, INTEGER=18, 
		LOWERCASE=19, UPPERCASE=20, TAB=21, LF=22, CR=23, SPACE=24, EXCLAMATION=25, 
		QUOTE=26, POUND=27, DOLLAR=28, PERCENT=29, AMPERSAND=30, APOSTROPHE=31, 
		LEFT_PAREN=32, RIGHT_PAREN=33, ASTERISK=34, PLUS=35, COMMA=36, DASH=37, 
		PERIOD=38, SLASH=39, ZERO=40, ONE=41, TWO=42, THREE=43, FOUR=44, FIVE=45, 
		SIX=46, SEVEN=47, EIGHT=48, NINE=49, COLON=50, SEMICOLON=51, LESS_THAN=52, 
		EQUALS=53, GREATER_THAN=54, QUESTION=55, AT=56, LEFT_BRACE=57, BACKSLASH=58, 
		RIGHT_BRACE=59, CARAT=60, UNDERSCORE=61, ACCENT=62, A=63, B=64, C=65, 
		D=66, E=67, F=68, G=69, H=70, I=71, J=72, K=73, L=74, M=75, N=76, O=77, 
		P=78, Q=79, R=80, S=81, T=82, U=83, V=84, W=85, X=86, Y=87, Z=88, LEFT_CURLY_BRACE=89, 
		PIPE=90, RIGHT_CURLY_BRACE=91, TILDE=92;
	public static final int
		RULE_entitytype = 0, RULE_classentity = 1, RULE_classaxiomtype = 2, RULE_subclass = 3, 
		RULE_equivalent = 4, RULE_objectproperty = 5, RULE_propertyaxiomtype = 6, 
		RULE_subobjectproperty = 7, RULE_objectpropertychain = 8, RULE_parentclasses = 9, 
		RULE_objectproperties = 10, RULE_propertyvalue = 11, RULE_cardinality = 12, 
		RULE_rangeexpression = 13, RULE_namedclass = 14, RULE_valueset = 15, RULE_union = 16, 
		RULE_complexclass = 17, RULE_only = 18, RULE_min = 19, RULE_max = 20, 
		RULE_exact = 21, RULE_iri = 22, RULE_ws = 23, RULE_comment = 24, RULE_sp = 25, 
		RULE_htab = 26, RULE_cr = 27, RULE_lf = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"entitytype", "classentity", "classaxiomtype", "subclass", "equivalent", 
			"objectproperty", "propertyaxiomtype", "subobjectproperty", "objectpropertychain", 
			"parentclasses", "objectproperties", "propertyvalue", "cardinality", 
			"rangeexpression", "namedclass", "valueset", "union", "complexclass", 
			"only", "min", "max", "exact", "iri", "ws", "comment", "sp", "htab", 
			"cr", "lf"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Value set'", "'min'", "'max'", "'exactly'", "'at least one'", 
			"'only'", "'any of/or'", "'Property'", "'Property chain'", "'Subproperty of'", 
			"'Entity type'", "'Object property'", "'Subclass of'", "'Equivalent to'", 
			"'Class entity'", "'Axiom type'", "'Class'", null, null, null, null, 
			null, null, "' '", "'!'", "'\"'", "'#'", "'$'", "'%'", "'&'", "'''", 
			"'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "'0'", "'1'", 
			"'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", "':'", "';'", 
			"'<'", "'='", "'>'", "'?'", "'@'", "'['", "'\\'", "']'", "'^'", "'_'", 
			"'`'", "'a'", "'b'", "'c'", "'d'", "'e'", "'f'", "'g'", "'h'", "'i'", 
			"'j'", "'k'", "'l'", "'m'", "'n'", "'o'", "'p'", "'q'", "'r'", "'s'", 
			"'t'", "'u'", "'v'", "'w'", "'x'", "'y'", "'z'", "'{'", "'|'", "'}'", 
			"'~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VALUESET", "MIN", "MAX", "EXACTLY", "SOME", "ONLY", "UNION", "PROPERTIES", 
			"PROPERTYCHAIN", "SUBOBJECTPROPERTY", "ENTITYTYPE", "OBJECTPROPERTY", 
			"SUBCLASS", "EQUIVALENT", "CLASSENTITY", "AXIOMTYPE", "CLASS", "INTEGER", 
			"LOWERCASE", "UPPERCASE", "TAB", "LF", "CR", "SPACE", "EXCLAMATION", 
			"QUOTE", "POUND", "DOLLAR", "PERCENT", "AMPERSAND", "APOSTROPHE", "LEFT_PAREN", 
			"RIGHT_PAREN", "ASTERISK", "PLUS", "COMMA", "DASH", "PERIOD", "SLASH", 
			"ZERO", "ONE", "TWO", "THREE", "FOUR", "FIVE", "SIX", "SEVEN", "EIGHT", 
			"NINE", "COLON", "SEMICOLON", "LESS_THAN", "EQUALS", "GREATER_THAN", 
			"QUESTION", "AT", "LEFT_BRACE", "BACKSLASH", "RIGHT_BRACE", "CARAT", 
			"UNDERSCORE", "ACCENT", "A", "B", "C", "D", "E", "F", "G", "H", "I", 
			"J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", 
			"X", "Y", "Z", "LEFT_CURLY_BRACE", "PIPE", "RIGHT_CURLY_BRACE", "TILDE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ENDOWL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ENDOWLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class EntitytypeContext extends ParserRuleContext {
		public TerminalNode ENTITYTYPE() { return getToken(ENDOWLParser.ENTITYTYPE, 0); }
		public TerminalNode COLON() { return getToken(ENDOWLParser.COLON, 0); }
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public ClassentityContext classentity() {
			return getRuleContext(ClassentityContext.class,0);
		}
		public EntitytypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entitytype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterEntitytype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitEntitytype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitEntitytype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntitytypeContext entitytype() throws RecognitionException {
		EntitytypeContext _localctx = new EntitytypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entitytype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(ENTITYTYPE);
			setState(59);
			match(COLON);
			setState(60);
			ws();
			setState(61);
			classentity();
			setState(62);
			ws();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassentityContext extends ParserRuleContext {
		public TerminalNode CLASSENTITY() { return getToken(ENDOWLParser.CLASSENTITY, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public ClassaxiomtypeContext classaxiomtype() {
			return getRuleContext(ClassaxiomtypeContext.class,0);
		}
		public ClassentityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classentity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterClassentity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitClassentity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitClassentity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassentityContext classentity() throws RecognitionException {
		ClassentityContext _localctx = new ClassentityContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classentity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(CLASSENTITY);
			setState(65);
			ws();
			setState(66);
			classaxiomtype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassaxiomtypeContext extends ParserRuleContext {
		public TerminalNode AXIOMTYPE() { return getToken(ENDOWLParser.AXIOMTYPE, 0); }
		public TerminalNode COLON() { return getToken(ENDOWLParser.COLON, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public SubclassContext subclass() {
			return getRuleContext(SubclassContext.class,0);
		}
		public EquivalentContext equivalent() {
			return getRuleContext(EquivalentContext.class,0);
		}
		public ClassaxiomtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classaxiomtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterClassaxiomtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitClassaxiomtype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitClassaxiomtype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassaxiomtypeContext classaxiomtype() throws RecognitionException {
		ClassaxiomtypeContext _localctx = new ClassaxiomtypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classaxiomtype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(AXIOMTYPE);
			setState(69);
			match(COLON);
			setState(70);
			ws();
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SUBCLASS:
			case CLASS:
				{
				setState(71);
				subclass();
				}
				break;
			case EQUIVALENT:
				{
				setState(72);
				equivalent();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubclassContext extends ParserRuleContext {
		public TerminalNode SUBCLASS() { return getToken(ENDOWLParser.SUBCLASS, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public ParentclassesContext parentclasses() {
			return getRuleContext(ParentclassesContext.class,0);
		}
		public ObjectpropertiesContext objectproperties() {
			return getRuleContext(ObjectpropertiesContext.class,0);
		}
		public SubclassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subclass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterSubclass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitSubclass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitSubclass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubclassContext subclass() throws RecognitionException {
		SubclassContext _localctx = new SubclassContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_subclass);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SUBCLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				match(SUBCLASS);
				setState(76);
				ws();
				setState(79);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CLASS:
					{
					setState(77);
					parentclasses();
					}
					break;
				case PROPERTIES:
					{
					setState(78);
					objectproperties();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(81);
				parentclasses();
				setState(82);
				ws();
				setState(83);
				objectproperties();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquivalentContext extends ParserRuleContext {
		public TerminalNode EQUIVALENT() { return getToken(ENDOWLParser.EQUIVALENT, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public ParentclassesContext parentclasses() {
			return getRuleContext(ParentclassesContext.class,0);
		}
		public EquivalentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equivalent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterEquivalent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitEquivalent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitEquivalent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquivalentContext equivalent() throws RecognitionException {
		EquivalentContext _localctx = new EquivalentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_equivalent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(EQUIVALENT);
			setState(88);
			ws();
			setState(89);
			parentclasses();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectpropertyContext extends ParserRuleContext {
		public TerminalNode OBJECTPROPERTY() { return getToken(ENDOWLParser.OBJECTPROPERTY, 0); }
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public PropertyaxiomtypeContext propertyaxiomtype() {
			return getRuleContext(PropertyaxiomtypeContext.class,0);
		}
		public ObjectpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectproperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterObjectproperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitObjectproperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitObjectproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectpropertyContext objectproperty() throws RecognitionException {
		ObjectpropertyContext _localctx = new ObjectpropertyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_objectproperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(OBJECTPROPERTY);
			setState(92);
			ws();
			setState(93);
			propertyaxiomtype();
			setState(94);
			ws();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyaxiomtypeContext extends ParserRuleContext {
		public TerminalNode AXIOMTYPE() { return getToken(ENDOWLParser.AXIOMTYPE, 0); }
		public TerminalNode COLON() { return getToken(ENDOWLParser.COLON, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public SubobjectpropertyContext subobjectproperty() {
			return getRuleContext(SubobjectpropertyContext.class,0);
		}
		public ObjectpropertychainContext objectpropertychain() {
			return getRuleContext(ObjectpropertychainContext.class,0);
		}
		public PropertyaxiomtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyaxiomtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterPropertyaxiomtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitPropertyaxiomtype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitPropertyaxiomtype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyaxiomtypeContext propertyaxiomtype() throws RecognitionException {
		PropertyaxiomtypeContext _localctx = new PropertyaxiomtypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_propertyaxiomtype);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AXIOMTYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(AXIOMTYPE);
				setState(97);
				match(COLON);
				setState(98);
				ws();
				setState(99);
				subobjectproperty();
				}
				break;
			case PROPERTYCHAIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				objectpropertychain();
				setState(102);
				ws();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubobjectpropertyContext extends ParserRuleContext {
		public TerminalNode SUBOBJECTPROPERTY() { return getToken(ENDOWLParser.SUBOBJECTPROPERTY, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public IriContext iri() {
			return getRuleContext(IriContext.class,0);
		}
		public SubobjectpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subobjectproperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterSubobjectproperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitSubobjectproperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitSubobjectproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubobjectpropertyContext subobjectproperty() throws RecognitionException {
		SubobjectpropertyContext _localctx = new SubobjectpropertyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_subobjectproperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(SUBOBJECTPROPERTY);
			setState(107);
			ws();
			setState(108);
			iri();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectpropertychainContext extends ParserRuleContext {
		public TerminalNode PROPERTYCHAIN() { return getToken(ENDOWLParser.PROPERTYCHAIN, 0); }
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public List<IriContext> iri() {
			return getRuleContexts(IriContext.class);
		}
		public IriContext iri(int i) {
			return getRuleContext(IriContext.class,i);
		}
		public TerminalNode EOF() { return getToken(ENDOWLParser.EOF, 0); }
		public ObjectpropertychainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectpropertychain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterObjectpropertychain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitObjectpropertychain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitObjectpropertychain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectpropertychainContext objectpropertychain() throws RecognitionException {
		ObjectpropertychainContext _localctx = new ObjectpropertychainContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_objectpropertychain);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(PROPERTYCHAIN);
			setState(111);
			ws();
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				iri();
				setState(113);
				ws();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << LOWERCASE) | (1L << UPPERCASE))) != 0) );
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EOF) {
				{
				setState(119);
				match(EOF);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParentclassesContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(ENDOWLParser.CLASS, 0); }
		public TerminalNode COLON() { return getToken(ENDOWLParser.COLON, 0); }
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public List<IriContext> iri() {
			return getRuleContexts(IriContext.class);
		}
		public IriContext iri(int i) {
			return getRuleContext(IriContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ENDOWLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ENDOWLParser.COMMA, i);
		}
		public ParentclassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parentclasses; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterParentclasses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitParentclasses(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitParentclasses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParentclassesContext parentclasses() throws RecognitionException {
		ParentclassesContext _localctx = new ParentclassesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parentclasses);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(CLASS);
			setState(123);
			match(COLON);
			setState(124);
			ws();
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				iri();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(126);
					match(COMMA);
					setState(127);
					ws();
					}
				}

				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << LOWERCASE) | (1L << UPPERCASE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectpropertiesContext extends ParserRuleContext {
		public TerminalNode PROPERTIES() { return getToken(ENDOWLParser.PROPERTIES, 0); }
		public List<PropertyvalueContext> propertyvalue() {
			return getRuleContexts(PropertyvalueContext.class);
		}
		public PropertyvalueContext propertyvalue(int i) {
			return getRuleContext(PropertyvalueContext.class,i);
		}
		public ObjectpropertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectproperties; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).enterObjectproperties(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ENDOWLListener ) ((ENDOWLListener)listener).exitObjectproperties(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ENDOWLVisitor ) return ((ENDOWLVisitor<? extends T>)visitor).visitObjectproperties(this);
			else return visitor.visitChildren(this);
		}
	}
